# plastic-recycle-webapp

./: Plastic Recycling Classification Helper.py  README.md  app.py  database.db  pyproject.toml  requirements.txt
static/: style.css
templates/: add.html  admin.html  edit.html  index.html
