[tool.poetry]
name = "plastic-recycle-webapp"
version = "0.1.0"
description = "Plastic Recycling Classification Helper"
authors = ["yoko2864-droid <yoko2864@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
flask = "3.1.2"
gunicorn = "21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
